--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "socket.io": "^2.2.0"
   }
 }
