--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.2",
     "express": "^4.17.0",
     "moment": "^2.24.0",
     "socket.io": "^2.2.0"
