--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.0",
+    "express-formidable": "^1.2.0",
+    "formidable": "^1.2.1",
+    "fs-extra": "^8.0.1",
     "moment": "^2.24.0",
+    "mongodb": "^3.2.7",
+    "multer": "^1.4.1",
     "socket.io": "^2.2.0"
   }
 }
